[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seocheon-sdk"
version = "0.1.0"
description = "Python SDK for the Seocheon blockchain"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "aiohttp>=3.9.0",
    "coincurve>=20.0.0",
    "bip-utils>=2.9.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "aioresponses>=0.7.6",
]

[tool.setuptools.packages.find]
include = ["seocheon*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
